# py-matlab-style-plotter

./: .gitignore  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: plot_large_lines.py
docs/: USAGE.md
examples/: matplotlib_2d_3d_demo.py
src/py_matlab_style_plotter/: __init__.py  interaction.py  matplotlib_adapter.py  matplotlib_bridge.py  matplotlib_context_menu.py  qt_context_menu.py
tests/: test_artist_registry.py  test_interaction.py  test_matplotlib_3d_overlay.py  test_matplotlib_adapter.py  test_matplotlib_bridge.py  test_matplotlib_context_menu.py  test_plot_3d.py  test_public_api.py  test_qt_context_menu.py
