[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "py-matlab-style-plotter"
version = "0.2.5"
description = "MATLAB-like axes plotting and UI interaction helpers for Python."
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
qt = ["PySide6>=6.5"]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]
