[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "py-matlab-style-plotter"
version = "0.2.7"
description = "MATLAB-like axes plotting and UI interaction helpers for Python."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["matplotlib", "matlab", "plotting", "qt", "interaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
qt = ["PySide6>=6.5"]
test = ["pytest>=8"]
dev = ["build>=1.2", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
